--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-wheel-picker-android",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Simple Wheel Picker for Android to use with react-native",
   "main": "index.js",
   "repository": {
@@ -27,7 +27,10 @@
   },
   "ava": {
     "babel": "inherit",
-    "files": [ "Tests/**/*.js", "!Tests/Setup.js" ],
+    "files": [
+      "Tests/**/*.js",
+      "!Tests/Setup.js"
+    ],
     "require": [
       "babel-register",
       "babel-polyfill",
