--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-native-wheel-picker-android",
+  "name": "@freework/react-native-wheel-picker-android",
   "version": "1.1.0",
   "description": "Simple Wheel Picker for Android to use with react-native",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ElekenAgency/ReactNativeWheelPicker.git"
+    "url": "git+https://github.com/freework-gmbh/ReactNativeWheelPicker.git"
   },
   "keywords": [
     "react-component",
